// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LevelButton> successfully renders the component, matches Snapshot 1`] = `
<DocumentFragment>
  <div
    class="levelButton"
  >
    <button
      class="levelButtons"
      id="levelButton-1234"
    />
  </div>
</DocumentFragment>
`;

exports[`<LevelButton> successfully renders the component, matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="levelButton"
  >
    <button
      class="levelButtons"
      id="levelButton-1234"
    >
      BUTTON 1234
    </button>
  </div>
</DocumentFragment>
`;
